--- a/Home_Work_N_11/17.02.2025_Home_Work_N_11_v1/HOME_WORK_TASKS.html
+++ b/Home_Work_N_11/17.02.2025_Home_Work_N_11_v1/HOME_WORK_TASKS.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS - Массивы. Домашнее задание</title>
+    <title>JS - Массивы. Домашнее задание № 11.</title>
     <link rel="stylesheet" href="HOME_WORK_TASKS.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>🎯 JS - Массивы. Домашнее задание</h1>
-        <p class="description">Практическая работа - Задания 1-5</p>
+        <h1>🎯 JS - Массивы. Домашнее задание № 11.</h1>
+        <p class="description">Домашняя работа - Задания с 1 по 5.</p>
+
+
+
+
 
         <!-- 🔹 ЗАДАНИЕ 1 -->
         <div class="section">
@@ -18,6 +22,10 @@
             <button onclick="findMinMax()">▶ Найти</button>
             <p id="minMaxResult"></p>
         </div>
+
+
+
+
 
         <!-- 🔹 ЗАДАНИЕ 2 -->
         <div class="section">
@@ -33,12 +41,20 @@
             <div id="compareResult"></div>
         </div>
 
+
+
+
+
         <!-- 🔹 ЗАДАНИЕ 4 -->
         <div class="section">
             <h2>📌 4. Отбор четных чисел</h2>
             <button onclick="filterEvenNumbers()">▶ Отобрать</button>
             <p id="evenNumbersResult"></p>
         </div>
+
+
+
+
 
         <!-- 🔹 ЗАДАНИЕ 5 -->
         <div class="section">
@@ -52,3 +68,7 @@
     <script src="HOME_WORK_TASKS.js"></script>
 </body>
 </html>
+
+
+
+
